--- a/src/app/pages/guardians/view-guardian-info/view-guardian-info.component.html
+++ b/src/app/pages/guardians/view-guardian-info/view-guardian-info.component.html
@@ -1,53 +1,28 @@
 <section class='d-flex flex-wrap name-field  mt-4'
          *ngIf='(guardianProfile$ | ngrxPush) as profile; else content_loading'>
-  <section class='col-lg-4 col-md-5 col-sm-6 mb-lg-3'>
-    <section class='d-flex flex-wrap'>
-      <span class='label-name col-12'>Email:</span>
-      <span class='label-value col col-xs-12'>
-        <ng-container *ngIf="!profile.email">
-          <span class="text-warning">Not Specified</span>
-        </ng-container>
-        {{ profile.email }}
-      </span>
-    </section>
+  <section class='col-md-7 col-lg-5 col-sm-12 mb-3'>
+    <app-name-item key="email" type='email' (valueChanged)='changeProfile($event)' [userId]='profile.id'
+                   label='Email' [name]='profile.email'></app-name-item>
   </section>
-  <section class='col-lg-4 col-md-5 col-sm-6 mb-lg-3'>
-    <section class='d-flex flex-wrap'>
-      <span class='label-name col-12'>Phone:</span>
-      <span class='label-value col col-xs-12'>
-        <ng-container *ngIf="!profile.phone">
-          <span class="text-warning">Not Specified</span>
-        </ng-container>
-        {{ profile.phone }}
-      </span>
-    </section>
+
+  <section class='col-md-7 col-lg-5 col-sm-12 mb-3'>
+    <app-name-item key="phone" type='tel' (valueChanged)='changeProfile($event)' [userId]='profile.id' label='Phone'
+                   [name]='profile.phone'></app-name-item>
   </section>
-  <section class='col-lg-4 col-md-5 col-sm-6 mb-lg-3'>
-    <section class='d-flex flex-wrap'>
-      <span class='label-name col-12'>Gender:</span>
-      <span class='label-value col col-xs-12'>
-        <ng-container *ngIf="!profile.genderName">
-          <span class="text-warning">Not Specified</span>
-        </ng-container>
-        {{ profile.genderName }}
-      </span>
-    </section>
+  <section class='col-md-7 col-lg-5 col-sm-12 mb-3'>
+    {{ profile.genderName }}
+    <app-user-select-item key="gender" (valueChanged)='updateSelectValue($event)' [valueName]='profile.genderName'
+                          [value]='profile.gender_id' [label]='"gender"' [items]='genders$' [userId]='profile.id'></app-user-select-item>
   </section>
-  <section class='col-md-7 col-lg-4 col-sm-6 mb-lg-3'>
-    <section class='d-flex flex-wrap'>
-      <span class='label-name col-12'>Date Of Birth:</span>
-      <span class='label-value col-12'> {{ profile.dateOfBirth }}</span>
-    </section>
+  <section class='col-md-7 col-lg-5 col-sm-12 mb-3'>
+    <app-name-item key="dateOfBirth" type='dob' (valueChanged)='changeProfile($event)' [userId]='profile.id'
+                   label='Date of Birth' [name]='profile.dateOfBirth'></app-name-item>
   </section>
-  <section class='col-lg-4 col-md-5 col-sm-6 mb-lg-3'>
-    <section class='d-flex flex-wrap'>
-      <span class='label-name col-12'>Religion:</span>
-      <span class='label-value col-12'>
-        <ng-container *ngIf="!profile.religionName">
-          <span class="text-warning">Not Specified</span>
-        </ng-container>
-        {{ profile.religionName }}</span>
-    </section>
+
+  <section class='col-md-7 col-lg-5 col-sm-12 mb-3'>
+    <app-user-select-item key="religion" (valueChanged)='updateSelectValue($event)' [valueName]='profile.religionName'
+                          [value]='profile.religion_id' [label]='"religion"' [items]='religions$' [userId]='profile.id'>
+    </app-user-select-item>
   </section>
 </section>
 <ng-template #content_loading>
